<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <POU Name="UIHandler" Id="{a3490850-cee6-4600-95c1-fd0c41cd1095}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK UIHandler
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	zeroSetCount : DINT := 500;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="AxisForceCtrlCmdHandling" Id="{3fa96bef-624e-4f5c-bd8b-43d783c32b6b}">
      <Declaration><![CDATA[METHOD PUBLIC AxisForceCtrlCmdHandling : BOOL
VAR_INPUT
END_VAR

VAR
	i: INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Axis command handling
FOR i := 0 TO 17 DO	
	(*IF gvl.emergencyStop THEN
		gvl.axisForceCtrlButton[i] := FALSE;
	END_IF*)
	
	IF GVL.axisForceCtrlButton[i] THEN
		IF NOT gvl.axisForceCtrlModeInd[i] THEN
			gvl.motorDrive[i].startForceControl();
			IF gvl.motorDrive[i].isInForceControl THEN
				gvl.axisForceCtrlModeInd[i] := TRUE;
			ELSE
				gvl.axisForceCtrlButton[i] := FALSE;
			END_IF
		END_IF
	ELSE
		IF gvl.axisForceCtrlModeInd[i] THEN
			gvl.axisForceCtrlModeInd[i] := FALSE;
			gvl.motorDrive[i].StopForceControl();
		END_IF
	END_IF
	
END_FOR]]></ST>
      </Implementation>
    </Method>
    <Method Name="AxisMotionCmdHandling" Id="{55e39ea1-3ee3-4840-ab91-8f6753e9e0ab}">
      <Declaration><![CDATA[METHOD PUBLIC AxisMotionCmdHandling : BOOL
VAR_INPUT
END_VAR

VAR
	i: INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Axis command handling,轴的运动最后都通过主函数调用JogControll函数实现，设置home位置，通过主函数调用电机驱动函数实现
FOR i := 0 TO 20 DO	

	IF GVL.enableButton[i] THEN
		GVL.enablebuttonText[i] :='Power Off';
	ELSE
		GVL.enablebuttonText[i] :='Power On';
	END_IF
	
	IF gvl.setInitPositionButton[i] THEN
		gvl.motorDrive[i].SetInitPosition();
		gvl.setInitPositionButton[i] := FALSE;
	END_IF
	
	IF gvl.startHomeButton[i] THEN
		gvl.motorDrive[i].StartGoHome();
		gvl.startHomeButton[i] := FALSE;
	END_IF
	
	IF gvl.AbsMoveButton[i] THEN
		gvl.motorDrive[i].StartAbsMove(GVL.AbsMoveTgtPos[i]);
		gvl.AbsMoveButton[i] := FALSE;
	END_IF
	
	IF gvl.AbsMoveStopButton[i] THEN
		gvl.motorDrive[i].StopAbsMove();
		gvl.AbsMoveStopButton[i] := FALSE;
	END_IF
	
	IF gvl.jogButton[i] THEN
		gvl.motorDrive[i].StartJog(gvl.jogVelocity[i]);
		gvl.jogButton[i] := FALSE;
	END_IF
	
	IF gvl.jogStopButton[i] THEN
		gvl.motorDrive[i].StopJog();
		gvl.jogStopButton[i] := FALSE;
	END_IF
	
	gvl.enableCmd[i] := GVL.enableButton[i]; 
END_FOR]]></ST>
      </Implementation>
    </Method>
    <Method Name="GaitCtrlCmdHandling" Id="{48b4b82b-4b20-467c-9124-a74c55572793}">
      <Declaration><![CDATA[METHOD PUBLIC GaitCtrlCmdHandling : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF gvl.startGaitButton AND NOT gvl.isInGaitMode THEN
	gvl.gaitPlanner.Initialize();
	gvl.isInGaitMode := TRUE;
	gvl.startGaitButton := FALSE;
	gvl.isFinished := FALSE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="GroupForceCtrlCmdHandling" Id="{8a37103f-d13d-46f2-b4e5-5a284722a6e4}">
      <Declaration><![CDATA[METHOD PUBLIC GroupForceCtrlCmdHandling : BOOL
VAR_INPUT
END_VAR

VAR
	i: INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF gvl.forceCtrlGroupButton THEN
	FOR i:= 0 TO 17 DO
		IF gvl.activeAxisList[gvl.groupSelector][i] = 1 THEN
			gvl.axisForceCtrlButton[i] := TRUE;
		END_IF
	END_FOR
	gvl.forceCtrlGroupButton := FALSE;
END_IF

IF gvl.forceCtrlGroupOffButton THEN
	FOR i:= 0 TO 17 DO
		IF gvl.activeAxisList[gvl.groupSelector][i] = 1 THEN
			gvl.axisForceCtrlButton[i] := FALSE;
		END_IF
	END_FOR
	gvl.forceCtrlGroupOffButton := FALSE;
END_IF

IF gvl.useHardImpedButton THEN
	gvl.kpGroup := 2000;
	gvl.kdGroup := 200;
	gvl.kpTrqGroup := 0;
	gvl.kiTrqGroup := 0;
	gvl.useParamIndex := 1;
	gvl.useHardImpedButton := FALSE;
END_IF

IF gvl.useSoftImpedButton THEN
	gvl.kpGroup := 220;
	gvl.kdGroup := 25;
	gvl.kpTrqGroup := 0.65;
	gvl.kiTrqGroup := 0.5;
	gvl.useParamIndex := 0;
	gvl.useSoftImpedButton := FALSE;
END_IF

IF gvl.setGroupImpedButton THEN
	FOR i:= 0 TO 17 DO
		gvl.motorDrive[i].SetImpedanceParam(gvl.kpGroup, gvl.kdGroup, gvl.kpTrqGroup, gvl.kiTrqGroup);
	END_FOR
	gvl.setGroupImpedButton := FALSE;
END_IF


]]></ST>
      </Implementation>
    </Method>
    <Method Name="GroupMotionCmdHandling" Id="{846d890f-5ae3-4005-9787-4d30369bdf1a}">
      <Declaration><![CDATA[METHOD PUBLIC GroupMotionCmdHandling : BOOL
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	i: INT;
END_VAR

]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF gvl.enableGroupButton THEN
	FOR i:= 0 TO 17 DO
		IF gvl.activeAxisList[gvl.groupSelector][i] = 1 THEN
			gvl.enableButton[i] := TRUE;
		END_IF
	END_FOR
	gvl.enableButton[18] := TRUE;
	gvl.enableButton[19] := TRUE;
	gvl.enableButton[20] := TRUE;
	gvl.enableGroupButton := FALSE;
END_IF

IF gvl.disableGroupButton THEN
	FOR i:= 0 TO 17 DO
		IF gvl.activeAxisList[gvl.groupSelector][i] = 1 THEN
			gvl.enableButton[i] := FALSE;
		END_IF
	END_FOR
	gvl.enableButton[18] := FALSE;
	gvl.enableButton[19] := FALSE;
	gvl.enableButton[20] := FALSE;
	gvl.disableGroupButton := FALSE;
END_IF

IF gvl.homeGroupButton THEN
	FOR i:= 0 TO 17 DO
		IF gvl.activeAxisList[gvl.groupSelector][i] = 1 THEN
			gvl.startHomeButton[i] := TRUE;
		END_IF
	END_FOR
	gvl.homeGroupButton := FALSE;
END_IF

IF gvl.setPosGroupButton THEN
	FOR i:= 0 TO 17 DO
		IF gvl.activeAxisList[gvl.groupSelector][i] = 1 THEN
			gvl.setInitPositionButton[i] := TRUE;
		END_IF
	END_FOR
	gvl.setPosGroupButton := FALSE;
END_IF

IF gvl.jogGroupButton THEN
	FOR i:= 0 TO 17 DO
		IF gvl.activeAxisList[gvl.groupSelector][i] = 1 THEN
			gvl.jogButton[i] := TRUE;
			gvl.jogVelocity[i] := gvl.jogGroupVelocity;
		END_IF
	END_FOR
	gvl.jogGroupButton := FALSE;
END_IF

IF gvl.jogStopGroupButton THEN
	FOR i:= 0 TO 17 DO
		IF gvl.activeAxisList[gvl.groupSelector][i] = 1 THEN
			gvl.jogStopButton[i] := TRUE;
		END_IF
	END_FOR
	gvl.jogStopGroupButton := FALSE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Initialize" Id="{da37c1fa-4ca6-4523-830d-241fa98138a3}">
      <Declaration><![CDATA[METHOD PUBLIC Initialize : BOOL
VAR_INPUT
END_VAR

VAR
	i: INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR i := 0 TO 19 DO
	gvl.enableButton[i] := FALSE;
	gvl.startHomeButton[i] := FALSE;
	gvl.setInitPositionButton[i] := FALSE; //yk 设置home位置,home结束需要点击setposition写入
	gvl.jogButton[i] := FALSE;
	gvl.jogVelocity[i] := 0.05;
	gvl.axisForceCtrlButton[i] := FALSE;  //yk 切换为力控模式
	gvl.axisForceCtrlModeInd[i] := FALSE;//yk 指示灯是否力控
END_FOR]]></ST>
      </Implementation>
    </Method>
    <Method Name="TrqSensorCmdHandling" Id="{0b7a0180-cb6d-4e73-8e31-4973ba3794fb}">
      <Declaration><![CDATA[METHOD PUBLIC TrqSensorCmdHandling : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// TSR control
IF gvl.setTSRZeroButton THEN
	gvl.setTrqSensorZero[0] := 63;
	gvl.setTrqSensorZero[1] := 63;
	gvl.setTrqSensorZero[2] := 63;
	zeroSetCount := zeroSetCount - 1;
ELSE
	gvl.setTrqSensorZero[0] := 0;
	gvl.setTrqSensorZero[1] := 0;
	gvl.setTrqSensorZero[2] := 0;
	zeroSetCount := 500;
END_IF

//往力传感器发送500次清零，防止丢包
IF zeroSetCount <= 0 THEN
	gvl.setTSRZeroButton := FALSE;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="UIHandler">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="UIHandler.AxisForceCtrlCmdHandling">
      <LineId Id="6" Count="1" />
      <LineId Id="57" Count="3" />
      <LineId Id="8" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="47" Count="1" />
      <LineId Id="45" Count="0" />
      <LineId Id="39" Count="1" />
      <LineId Id="49" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="12" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="UIHandler.AxisMotionCmdHandling">
      <LineId Id="6" Count="1" />
      <LineId Id="42" Count="0" />
      <LineId Id="8" Count="14" />
      <LineId Id="53" Count="0" />
      <LineId Id="50" Count="2" />
      <LineId Id="49" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="56" Count="2" />
      <LineId Id="55" Count="0" />
      <LineId Id="23" Count="11" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="UIHandler.GaitCtrlCmdHandling">
      <LineId Id="6" Count="4" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="UIHandler.GroupForceCtrlCmdHandling">
      <LineId Id="6" Count="6" />
      <LineId Id="5" Count="0" />
      <LineId Id="17" Count="7" />
      <LineId Id="16" Count="0" />
      <LineId Id="79" Count="5" />
      <LineId Id="100" Count="0" />
      <LineId Id="85" Count="7" />
      <LineId Id="103" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="33" Count="1" />
      <LineId Id="49" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="70" Count="0" />
    </LineIds>
    <LineIds Name="UIHandler.GroupMotionCmdHandling">
      <LineId Id="14" Count="5" />
      <LineId Id="76" Count="1" />
      <LineId Id="89" Count="0" />
      <LineId Id="20" Count="8" />
      <LineId Id="78" Count="1" />
      <LineId Id="90" Count="0" />
      <LineId Id="29" Count="37" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="UIHandler.Initialize">
      <LineId Id="6" Count="5" />
      <LineId Id="18" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="UIHandler.TrqSensorCmdHandling">
      <LineId Id="6" Count="3" />
      <LineId Id="26" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="10" Count="2" />
      <LineId Id="27" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="19" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>